2005-10-03  Frank Lichtenheld  <djpig@debian.org>

	* scripts/dpkg-source.pl: Try to chown files extracted from
	a tar file to the uid and gid of the user. This should make
	dpkg-source -x safer to use as root. Also create the temporary
	directory mode 0700 to not allow anyone exploiting races
	between the extraction and the chown.

2005-08-27  Frank Lichtenheld  <djpig@debian.org>

	* scripts/dpkg-gencontrol: Bail out with an error if parsedep
	found an error while parsing a dependency field.

2005-08-17  Scott James Remnant  <scott@netsplit.com>

	* configure.ac: Bump version to 1.13.12~.

	* configure.ac: Release 1.13.11.

	* scripts/dpkg-source.pl: Re-work the logic that handles the Files
	field when unpacking source packages; always remove the revision
	component and thereby allow -$rev.orig.tar.gz as well as native
	diff.gz or debian.tar.gz; improve the "unrecognised file" error to
	give the full filename, not the mangled suffix; check whether the
	revision has length, rather than is non-zero ("0" is false in Perl).

2005-08-17  Frank Lichtenheld  <djpig@debian.org>

	* scripts/controllib.pl (parsedep): Correct a bug that caused wrong
	architecture requirements in some cases, due to only "my"ing the
	@arches list in some circumstances.

2005-08-17  Colin Watson  <cjwatson@ubuntu.com>

	* src/processarc.c (process_archive): When copying the forward
	dependency tree, blank the version field of unversioned dependencies
	rather than leaving them uninitialised.

2005-08-17  Scott James Remnant  <scott@netsplit.com>

	* scripts/dpkg-source.pl: Fix a few problems found with the
	$diff_ignore_default_regexp value; it'd match any path with
	DEADJOE in it somewhere (or .cvsignore, etc.), wouldn't match
	an initial CVS or {arch}, etc.
	Took the opportunity to reformat the string and add some comments,
	which get stripped out before it's used.
	Added tla/baz junk ",,.*" to the list of filters.

	* lib/dbmodify.c (log_message): Call setcloexec() on the log