@@ -8,6 +8,9 @@ dpkg (1.13.12~) unstable; urgency=low
     0700, too. Together this should make it safer to run
     dpkg-source -x as root. Based on suggestions by Marcus
     Brinkmann and Colin Watson. Closes: #144571, #238460
+  * Let dpkg-source -b check the build relation fields before
+    putting them into the .dsc. As a side effect they also
+    get normalized. Closes: #254449
 
  --
 
