@@ -1,3 +1,10 @@
+2005-10-04  Frank Lichtenheld  <djpig@debian.org>
+ 
+	* scripts/dpkg-source.pl: Check build relation
+	fields for correctness before putting them into
+	the .dsc when building. This also normalizes the
+	fields.
+ 
 2005-10-03  Frank Lichtenheld  <djpig@debian.org>
 
 	* scripts/dpkg-source.pl: Try to chown files extracted from
